// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`shieldBlock should block attack if target has less attrs 1`] = `
"*Игрок 2* использовал _🛡️ Блок щитом_ с эффектом 10.67

*Игрок 1* пытался атаковать *Игрок 2*, но у него не получилось
_🛡️ Блок щитом_ *Игрок 2*: 📖40"
`;

exports[`shieldBlock should breack block with multiple attacks 1`] = `
"*Игрок 2* использовал _🛡️ Блок щитом_ с эффектом 10.67

*Игрок 1* пытался атаковать *Игрок 2*, но у него не получилось
_🛡️ Блок щитом_ *Игрок 2*: 📖40
*Игрок 1* пытался атаковать *Игрок 2*, но у него не получилось
_🛡️ Блок щитом_ *Игрок 2*: 📖40
*Игрок 1* рубанул *Игрок 2* _Оружием_ и нанёс *7.2* урона
\\[ Игрок 2 💥 💔-7.2/0.8 📖58 ]"
`;
